--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3"
   },
