--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-masonry-css": "^1.0.16",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
-    "react-toastify": "^9.1.3"
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
